fix scrollbar issue for text container

--- a/src/email_web/TextContainer.css
+++ b/src/email_web/TextContainer.css
@@ -25,8 +25,7 @@
 }
 
 .text-page-tall {
-    height: 100%;
+    min-height: 100%;
     margin-top: 0px;
     padding-top: 80px;
-    overflow: auto;
 }
